# cuvs-silicon

./: .gitignore  .ouroboros_eval_artifact.md  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  migrate-project-sessions.skill  seed.yaml
.metal-cagra/: build-state.json
.ouroboros/: mechanical.toml
benchmarks/: compare_metal_vs_metalfaiss.py  comparison_result.json
cuvs_silicon/: __init__.py  benchmark.py
docs/: apple_silicon_gpu_vector_search_report.md  multi-cta-ivf-pq-lessons.md  spec.md  tasks.md
include/cuvs/distance/: distance.hpp
include/cuvs/neighbors/: cagra.hpp
include/cuvs_silicon/: distance.hpp  hardware.hpp  metal_context.hpp  sift_loader.hpp
include/cuvs_silicon/baselines/: cpu_hnsw.hpp
include/raft/core/: device_mdspan.hpp  resources.hpp
scripts/: download_cohere_wiki.py
shaders/: cagra_kernels.metal
src/: cagra.cpp  distance.cpp  hardware.cpp  metal_context.mm  metal_search.mm  sift_loader.cpp
tests/: faiss_v1_8_cagra_runtime_smoke.cpp  faiss_v1_8_cuvs_header_probe.cpp  faiss_v1_8_cuvs_link_probe.cpp  test_benchmark_batching.py  test_cohere_wiki_validation.cpp  test_cpu_hnsw_baseline.cpp  test_hardware_detection.cpp  test_l2_distance.cpp  test_metal_search.cpp  test_sift_loader.cpp
tests/cmake/: run_faiss_v1_8_cagra_runtime_smoke.cmake  run_faiss_v1_8_cuvs_header_compile.cmake  run_faiss_v1_8_cuvs_link.cmake
